[package]
name = "proxy_panel"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
axum = "0.6"
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tokio-util = "0.7"
tower-http = { version = "0.4", features = ["cors"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
time = { version = "0.3", features = ["formatting"] }
maxminddb = "0.24"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"] }

[target.'cfg(windows)'.dependencies]
windows-service = "0.6"
